# stephanoskomnenos.github.io

./: .dir-locals.el  .gitignore  404.html  CNAME  Makefile  _config.fluid.yml  _config.yml  about.html  about.md  about.org  blog-hakyll.cabal  config.toml  index.html  index.json  index.xml  local-search.xml  package-lock.json  site.hs  sitemap.xml  tailwind.config.js
.github/workflows/: gh-pages.yml
about/: index.html
archives/: index.html
archives/2022/: index.html
categories/: index.html  index.xml
content/posts/: git-workflow.md  lab1-mapreduce.md
css/: extra.css  main.css  syntax.css  tailwind-extra.css  tailwind.css
links/: index.html
ox-hugo/: git-workflow.org
ox-hugo/6.824/: lab1-mapreduce.org
ox-hugo/git-workflow/: git-workflow.org
page/1/: index.html
posts/: 2022-05-20-git-workflow.html  2022-05-20-git-workflow.org  2022-07-18-6.824-lab1-mapreduce.html  2022-07-18-6.824-lab1-mapreduce.org  2022-09-07-6.824-lab2-raft.html  2022-09-07-6.824-lab2-raft.org  index.html  index.xml
posts/2022-05-20-git-workflow/: 2022-05-20-git-workflow.html  2022-05-20-git-workflow.org  index.html  index.org
posts/2022-07-18-6.824/: 2022-07-18-6.824-lab1-mapreduce.html  2022-07-18-6.824-lab1-mapreduce.org  (+2 more)
posts/2022-07-18-6.824-lab1/: index.html  index.org
tags/: 6.824.html  distributed system.html  game.html  git.html  index.html  index.xml  kino.html  music.html
templates/: archive.html  article-card.html  article-content.html  article-list.html  card.html  default.html  giscus.html  post-list.html  post.html  tag.html  toc.html
(+19 files in other folders)
