name:               blog-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , bytestring == 0.11.*
                  , containers == 0.6.*
                  , filepath == 1.4.*
                  , hakyll == 4.15.*
                  , JuicyPixels == 3.3.*
                  , pandoc == 2.19.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
